src/pages/DashboardPage/Dashboard.css
.dashboard {
  width: 100%;
  /* height: 100%; */
  position: relative;
  padding: 12px;
  background-color: var(--bg-secondary);
  /* min-height: 100vh; */
  display: flex;
  gap: 12px;
}

.dashboard-left {
  flex: 2; /* This will make it take available space */
  min-width: 0; /* Important for flex items to shrink properly */
  display: flex;
  flex-direction: column;
}

.dashboard-right {
  /* height: 100%; */
  display: flex;
  align-items: center;
  flex-direction: column;
  border: 1px solid #dddddd; /* Updated light mode border */
  border-radius: 16px;
  padding: 12px;
  padding-top: 8px;
  background-color: var(--bg-primary);
}

.dashboard-right .profile-section {
  border: none;
  padding: 10px;
  padding-bottom: 12px;
  margin-bottom: 12px;
  border-bottom: 1px solid var(--border-color);
}

/* Update dark mode override */
[data-theme="dark"] .chart-container,
[data-theme="dark"] .dashboard-right {
  border-color: #4d4d4d; /* Updated dark mode border */
}
/* CHECKPOINT FOR RADARCHART COLORS. */

.theme-toggle {
  /* position: absolute; */
  /* top: 20px; */
  /* right: 20px; */
  background: none;
  border: none;
  color: var(--text-primary);
  cursor: pointer;
  width: 40px;
  height: 40px;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  transition: all var(--transition-duration) ease;
}

.theme-toggle:focus {
  outline: none; /* Remove the default focus outline */
}

.theme-toggle:hover {
  background-color: transparent; /* Ensure no background on hover */
}

.theme-toggle svg {
  width: 24px;
  height: 24px;
  transition: transform 0.2s ease;
}

.theme-toggle:hover svg {
  transform: scale(1.1);
}

.dashboard-content {
  background-color: var(--bg-primary);
  border-radius: 16px;
  padding: 24px;
  box-shadow: 0 4px 8px var(--box-shadow);
}

